--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=C:\\Users\\DELL\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\src\\Flutter\\flutter
+sdk.dir=C:\\Users\\DAVID\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\src\\flutter\\flutter
